@@ -62,6 +62,9 @@ extern "C" {
 
 	int is_authorized_for_hostgroup(hostgroup *, authdata *);
 	int is_authorized_for_servicegroup(servicegroup *, authdata *);
+	
+	int is_authorized_for_hostgroup_commands(hostgroup *, authdata *);
+	int is_authorized_for_servicegroup_commands(servicegroup *, authdata *);
 
 	int is_authorized_for_configuration_information(authdata *);
 
