@@ -31,6 +31,7 @@ FIXES
 * Fixed flexible downtime on service hard state change doesn't get triggered/activated (Michael Friedrich)
 * Fixed XSS vulnerability in config.cgi and statusmap.cgi (Stefan Schurtz)
 * Fixed segfault when sending host notifications (Michael Friedrich)
+* Fixed bug where unauthorized contacts could issue hostgroup and servicegroup commands (Sven Nierlein)
 
 WARNINGS
 
